--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,31 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-"dependencies": {
-  "@sendgrid/mail": "^8.1.6",
-  "bcrypt": "^6.0.0",
-  "cors": "^2.8.5",
-  "dotenv": "^17.2.3",
-  "express": "^5.2.1",
-  "jsonwebtoken": "^9.0.3",
-  "mongoose": "^9.0.2",
-  "node-cron": "^4.2.1",
-  "@types/node": "^25.0.3"
-},
-"devDependencies": {
-  "@types/bcrypt": "^6.0.0",
-  "@types/cors": "^2.8.19",
-  "@types/express": "^5.0.6",
-  "@types/jsonwebtoken": "^9.0.10",
-  "ts-node-dev": "^2.0.0",
-  "tsx": "^4.21.0",
-  "typescript": "^5.9.3"
-}
+  "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.2",
+    "node-cron": "^4.2.1",
+
+    "@types/node": "^25.0.3",
+    "@types/express": "^5.0.6",
+    "@types/cors": "^2.8.19",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
+  }
 }
